--- a/src/index.css
+++ b/src/index.css
@@ -46,4 +46,8 @@
     .right-title {
         @apply absolute
     }
+
+    .cards {
+        @apply w-full h-full flex flex-col md:flex-row  gap-10 md:gap-10 pb-10;
+    }
 }
